more fix for dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,10 @@ input{
 h1, h2, h3, h4, h5, h6{
   color: black;
 }
-select{
+label{
+  color: black;
+}
+textarea{
   background-color: white;
   color: black;
 }
